# SandKings

./: .dockerignore  .gitignore  1pageskirmish.py  BATTLE_SYSTEM_V2.md  CHANGELOG.md  CHANGELOG_SANDKINGS.md  Dockerfile  INSPIRATIONS.md  NEURAL_HIVE_IMPLEMENTATION.md  NEURAL_QUICKREF.md  README.md  README_SANDKINGS.md  SPEC_ARENA.md  SPEC_AUGMENTS.md  SPEC_AWARENESS.md  SPEC_BARGAIN.md  SPEC_BIOME.md  SPEC_BREAKOUT.md  SPEC_CODEX.md  SPEC_CURRENCY.md  SPEC_DASHBOARD.md  SPEC_DIALOGUE.md  SPEC_DYNASTIES.md  SPEC_ENLIGHTENMENT.md  SPEC_EVOLUTION.md  SPEC_FACES.md  SPEC_FIT_CONSTANTS.md  SPEC_FOOD_WEB.md  SPEC_GRAPHICS.md  SPEC_GUPPIES.md  SPEC_HIVE_MONITOR.md  SPEC_HYDRO.md  SPEC_HYDRO_HAND.md  SPEC_INDEX.md  SPEC_KEEPER.md  SPEC_LABOR.md  SPEC_LIVE_VIEW.md  SPEC_MACHINE_AGE.md  SPEC_METAMORPHOSIS.md  SPEC_NEURAL_ACTIVATION_TRACKING.md  (+46 more)
src/corewar/: graphics_random.py  graphics_rounds.py  llm_evolve.py  pyproject.toml  testing.ipynb
src/corewar/corewar/: __init__.py  core.py  mars.py  redcode.py  temp.ipynb  viz.py
src/corewar/gpt_warriors/: 0_0.red  0_2.red  0_3.red  0_5.red  0_8.red  0_9.red  10_0.red  10_1.red  10_4.red  10_7.red  11_0.red  11_1.red  11_2.red  11_3.red  11_5.red  11_6.red  11_7.red  12_1.red  12_3.red  12_4.red  12_5.red  12_9.red  13_0.red  13_1.red  13_2.red  13_4.red  13_5.red  13_7.red  13_9.red  14_0.red  14_1.red  14_5.red  14_6.red  14_7.red  15_7.red  16_4.red  16_8.red  17_0.red  17_2.red  17_3.red  (+81 more)
src/corewar/warriors/: _ak_test.red  advanceddwarf.red  bot.red  coreclear.red  crazy.red  doubleimp.red  dwarfjumper.red  impgate.red  (+7 more)
(+356 files in other folders)
